feat: full 1.5.0 compatibility
This means that the processor now behave exactly the same on both 1.5.0 and 2.0.0-SNAPSHOT.
This commit also goes ahead and bumps the version.